Tue Oct 22 02:13:55 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Resources/GNUmakefile (string): Renamed to after-strings so 
	that it works with the new gnustep-make strings targets.

2002-10-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSView.m: Key view code ... complete rewrite to match
	MacOS-X implementation.  Fix coding bug in rewrite.
	* Source/NSTextField.m: don't use _nextKeyView
	* Source/NSMatrix.m: don't use _nextKeyView

Mon Oct 21 01:17:41 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSView.m ([-setNextKeyView:], [-setPreviousKeyView:]):
	Rewritten the way the next/previous key view chain is managed, to
	fix problem when a next/previous key view is replaced with a new
	one (Patch by Caba Conti modified).

2002-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/gui/NSComboBox.h: Add APPKIT_EXPORT and make layout
	a bit more consistent. 
	* Source/NSTextView.m: ([-dealloc]) remove unneeded RETAIN()
	Fixes for beugs reported by Caba Conti.

2002-10-18  Adam Fedor  <fedor@gnu.org>

	* Documentation/announce.texi: Fix grammer.

	* Try to fix focus interaction with WindowMaker.
	* Source/NSApplication.m ([NSIconWindow -canBecomeKeyWindow]):
	Revert 2002-10-08 change.
	(-appIconInit): Don't set input focus to app icon.
	(-_windowWillClose:): Idem.
	* Source/NSMenu.m: New class NSMenuPanel
	(_createWindow): Use it.
	* Source/NSWindow.m (-_lossOfKeyOrMainWindow): Make sure menu
	window doesn't get key except as a last resort.
	(-sendEvent: (GSAppKitWindowFocusIn)): Don't become key if app 
	is hidden.

	* Source/NSPanel.m (-sendEvent:): Same as change to NSWindow on
	2002-10-03.

	* Source/NSDocument.m (-init): Set default file type.

Tue Oct 15 02:36:32 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m (initialize_gnustep_backend): Get the
	GSBackend class using NSClassFromString() rather than NSBundle's
	-classNamed: to make it more robust on platforms - eg MS Windows -