@@ -180,83 +180,6 @@ static GSFontEnumerator *sharedEnumerator = nil;
     return [arr objectAtIndex: aWeight];
 }
 
-+ (NSStringEncoding) encodingForRegistry: (NSString*)registry 
-				encoding: (NSString*)encoding
-{
-  if ([registry isEqualToString: @"iso8859"])
-    {
-      if ([encoding isEqualToString: @"1"])
-	return NSISOLatin1StringEncoding;
-      else if ([encoding isEqualToString: @"2"])
-	return NSISOLatin2StringEncoding;
-      else if ([encoding isEqualToString: @"3"])
-	return NSISOLatin3StringEncoding;
-      else if ([encoding isEqualToString: @"4"])
-	return NSISOLatin4StringEncoding;
-      else if ([encoding isEqualToString: @"5"])
-	return NSISOCyrillicStringEncoding;
-      else if ([encoding isEqualToString: @"6"])
-	return NSISOArabicStringEncoding;
-      else if ([encoding isEqualToString: @"7"])
-	return NSISOGreekStringEncoding;
-      else if ([encoding isEqualToString: @"8"])
-	return NSISOHebrewStringEncoding;
-      // Other latin encodings are currently not supported
-    }
-  else if ([registry isEqualToString: @"iso10646"])
-    {
-      if ([encoding isEqualToString: @"1"])
-	return NSUnicodeStringEncoding;
-    }
-  else if ([registry isEqualToString: @"microsoft"])
-    {
-      if ([encoding isEqualToString: @"symbol"])
-	return NSSymbolStringEncoding;
-      else if ([encoding isEqualToString: @"cp1250"])
-	return NSWindowsCP1250StringEncoding;
-      else if ([encoding isEqualToString: @"cp1251"])
-	return NSWindowsCP1251StringEncoding;
-      else if ([encoding isEqualToString: @"cp1252"])
-	return NSWindowsCP1252StringEncoding;
-      else if ([encoding isEqualToString: @"cp1253"])
-	return NSWindowsCP1253StringEncoding;
-      else if ([encoding isEqualToString: @"cp1254"])
-	return NSWindowsCP1254StringEncoding;
-    }
-  else if ([registry isEqualToString: @"apple"])
-    {
-      if ([encoding isEqualToString: @"roman"])
-	return NSMacOSRomanStringEncoding;
-    }
-  else if ([registry isEqualToString: @"jisx0201.1976"])
-    {
-      if ([encoding isEqualToString: @"0"])
-	return NSShiftJISStringEncoding;
-    }
-  else if ([registry isEqualToString: @"iso646.1991"])
-    {
-      if ([encoding isEqualToString: @"irv"])
-	return NSASCIIStringEncoding;
-    }
-  else if ([registry isEqualToString: @"koi8"])
-    {
-      if ([encoding isEqualToString: @"r"])
-	return NSKOI8RStringEncoding;
-    }
-  else if ([registry isEqualToString: @"gb2312.1980"])
-    {
-      if ([encoding isEqualToString: @"0"])
-	return NSGB2312StringEncoding;
-    }
-  else if ([registry isEqualToString: @"big5"])
-    {
-      if ([encoding isEqualToString: @"0"])
-        return NSBIG5StringEncoding;
-    }
-
-  return NSASCIIStringEncoding;
-}
-
 - init
 {
   [super init];
